# emlang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  emlang.rc  resource.h
compiler/: CMakeLists.txt  builtins.cpp  emlang_compiler.rc  resource.h
compiler/ast/: CMakeLists.txt  ast.cpp  ast_base.cpp  decl.cpp  dumper.cpp  expr.cpp  stmt.cpp  visitor.cpp
compiler/codegen/: CGBase.cpp  CGDecl.cpp  CGExpr.cpp  CGStmt.cpp  CMakeLists.txt  aot_compiler.cpp  builtins_integration.cpp  codegen.cpp  codegen_error.cpp  context.cpp  llvm_context.cpp  target_config.cpp  value_map.cpp
compiler/lexer/: CMakeLists.txt  lexer.cpp  token.cpp
compiler/parser/: CMakeLists.txt  parser.cpp  parser_error.cpp
compiler/semantic/: CMakeLists.txt  analyzer.cpp  semantic.cpp  semantic_core.cpp  semantic_error.cpp  symbol_table.cpp  type_checker.cpp
include/: ast.h  builtins.h  codegen.h  emlang.h  emlang_export.h  lexer.h  parser.h  semantic.h
include/ast/: ast_base.h  decl.h  dumper.h  expr.h  stmt.h  visitor.h
include/codegen/: CGBase.h  CGDecl.h  CGExpr.h  CGStmt.h  aot_compiler.h  base.h  builtins_integration.h  codegen.h  codegen_error.h  context.h  llvm_context.h  target_config.h  value_map.h
include/lexer/: lexer_core.h  token.h
include/parser/: parser.h  parser_error.h
include/semantic/: analyzer.h  semantic_core.h  semantic_error.h  symbol_table.h  type_checker.h
src/: emlang_check.cpp  main.cpp
tests/: advanced_char_test.em  assignment_test.em  char_string_test.em  emlang_library_test.em  error_test.em  extern_function_test.em  fib.em  multilevel_pointer_test.em  phase2_integration_test.em  phase3_pointer_test.em  simple_assignment_test.em  simple_extern_test.em  simple_main_test.em  simple_pointer_test.em  simple_types_test.em  string_test.em  test.em
